# linearscan

./: #Allocate.v#  .gitignore  .gitmodules  Allocate.v  Assign.v  Blocks.v  Build.v  Compare.v  Compare.v.d  Cursor.v  Fin.v  Fin.v.d  Graph.v  IApplicative.v  IEndo.v  IMonad.v  IState.v  IntMap.v  Interval.v  Interval.v.d  Interval2.v  IxState.v  LICENSE  Lens.v  Lib.v  Lib.v.d  LinearScan.hs  LinearScan.v  LinearScanOrig.hs  LiveSets.v  Loops.v  Ltac.v  Machine.v  Machine.v.d  Main.v  Makefile  Monad.v  Morph.v  NoDup.v  NoDup.v.d  (+40 more)
.github/workflows/: coq-ci.yml
Data/: Alternative.hs  Applicative.hs  Basics.hs  Compare.hs  Compare_dec.hs  Datatypes.hs  Endo.hs  EqNat.hs  Fin.hs  Fin0.hs  IApplicative.hs  IEndo.hs  IMonad.hs  IState.hs  Interval.hs  Lib.hs  LinearScan.hs  List.hs  List0.hs  Logic.hs  Main.hs  NPeano.hs  NonEmpty.hs  NonEmpty0.hs  Peano.hs  Plus.hs  Range.hs  Specif.hs  State.hs  Top.hs  Vector0.hs  Vector1.hs  eqtype.hs  seq.hs  ssrbool.hs  ssrnat.hs
LinearScan/: Allocate.hs  Alternative.hs  Applicative.hs  Ascii.hs  Assign.hs  Basics.hs  Blocks.hs  Build.hs  Compare.hs  Compare_dec.hs  Cursor.hs  Datatypes.hs  Endo.hs  EqNat.hs  Fin.hs  Fin0.hs  Graph.hs  IApplicative.hs  IEndo.hs  IMonad.hs  IState.hs  IntMap.hs  Interval.hs  Lib.hs  List0.hs  LiveSets.hs  Logic.hs  Loops.hs  Main.hs  Morph.hs  NonEmpty0.hs  Order.hs  Peano.hs  Plus.hs  Proto.hs  Range.hs  Resolve.hs  ScanState.hs  Specif.hs  Split.hs  (+15 more)
doc/: Makefile  README  TODO.org  linearscan.tex  linearscan.tmp.tex  linearscan.v.aux  linearscan.v.out  linearscan.v.tex  lscoqtop  lstlangcoq.sty  report.org  safe.bib  tools.hs  wrap-coq-tex
doc/cpp/: Makefile  linearscan.bib  linearscan.tex
html/: Allocate.html  Compare.html  Fin.html  Interval.html  Lib.html  LinearScan.html  Machine.html  Main.html  NoDup.html  NonEmpty.html  Range.html  SSMorph.html  ScanState.html  index.html  toc.html
new/: Blocks4.v  Emilio.v  Interval2.v  Lib4.v  NonEmpty2.v  NonEmpty4.v  Range2.v  Range3.v  ScanState4.v  Vector4.v  emilio.txt  ntuple.v  ssrtuple.v
old/: Blocks.v
src/: Allocate.v  Assign.v  Blocks.v  Build.v  Context.v  Cursor.v  Graph.v  IState.v  IntMap.v  IntSet.v  Interval.v  Lib.v  ListSsr.v  LiveSets.v  Loops.v  Main.v  Morph.v  NonEmpty.v  Range.v  Resolve.v  ScanState.v  Spec.v  Spill.v  Split.v  Ssr.v  Tactics.v  Trace.v  UsePos.v  Vector.v  Verify.v
test/: AsmTest.hs  Assembly.hs  DSL.hs  Hoopl.hs  Main.hs  Tempest.hs  Test.hs
