name:                linearscan
version:             0.1.0.0
synopsis:            An optimized linear scan register allocator
-- description:         
homepage:            http://github.com/jwiegley/linearscan
license:             BSD3
license-file:        LICENSE
author:              John Wiegley
maintainer:          johnw@newartisans.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    LinearScan
  other-modules:
    Data.Compare,
    Data.Compare_dec,
    Data.Datatypes,
    Data.EqNat,
    Data.Fin,
    Data.Fin0,
    Data.Interval,
    Data.Lib,
    Data.Main,
    Data.List0,
    Data.Logic,
    Data.NonEmpty0,
    Data.NPeano,
    Data.Peano,
    Data.Range,
    Data.Specif
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
