name:          linearscan
version:       0.1.0.0
synopsis:      An optimized linear scan register allocator
homepage:      http://github.com/jwiegley/linearscan
license:       BSD3
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@newartisans.com
category:      Development
build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules:  LinearScan
  build-depends:    base >=4.7 && <4.8
                  , transformers
